<resources>
    <string name="app_name">Executive Secretary</string>
    <string name="appointments">My Appointments</string>
    <string name="buttonSchedule">Schedule Appointment</string>
    <string name="textName">John Smith</string>
    <string name="textPhone">555&#8211;555&#8211;5555</string>
    <string name="buttonBishop">Bishop</string>
    <string name="buttonCounselor">Counselor</string>
    <string name="buttonSecretary">Secretary</string>
    <string name="buttonConfirm">Confirm</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="buttonSignInOrRegister">Sign In or Register</string>
    <string name="textMembershipNumber">LDS Membership Number</string>
    <string name="textPassword">Enter a password</string>
    <string name="textCreateAppointment">Create an Appointment</string>
    <string name="textNeedApprovalAppointments">Appointments that need approval</string>
    <string name="buttonApprove">Approve</string>
    <string name="buttonDeny">Deny</string>
    <string name="buttonCreateAppointment">Create Appointment</string>
    <string name="buttonScheduleAppointment">Schedule Appointment</string>
    <string name="textEnterNameAndNumber">Enter the name, membership number and phone number of the person for whom you are scheduling for.</string>
    <string name="month">05</string>
    <string name="day">22</string>
    <string name="year">2018</string>
    <string name="hour">6</string>
    <string name="minute">35</string>
    <string name="AMorPM">PM</string>
    <string name="place">TAY 220</string>
    <string name="textDash">/</string>
    <string name="textColon">:</string>
    <string name="textPromptDate">Enter date in the format of mm/dd/yyyy</string>
    <string name="textPromptTime">Enter time in the format hh:mm  AM or PM</string>
    <string name="textPromptPlace">Place:</string>
</resources>
